--- a/templates/result.html
+++ b/templates/result.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <center>
-            <h1>Welcome to the event...</h1><br>
+            <h1>Welcome Here </h1><br>
             <h3>Your Details</h3><br>
             <h4>Name : </h4><p>{{name}}</p><br>
             <h4>Roll No. : </h4><p>{{roll}}</p><br>
